--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.2",
     "inquirer": "^12.0.1",
+    "localtunnel": "^2.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
