--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@atproto/repo": "^0.3.2",
     "@atproto/syntax": "^0.1.2",
     "@atproto/xrpc-server": "^0.7.9",
+    "@types/ws": "^8.18.1",
     "better-sqlite3": "^11.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "kysely": "^0.27.4",
-    "multiformats": "^9.9.0"
+    "multiformats": "^9.9.0",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
