--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "publishFeed": "ts-node scripts/publishFeedGen.ts",
     "unpublishFeed": "ts-node scripts/unpublishFeedGen.ts",
     "start": "ts-node src/index.ts",
+    "turbo": "ts-node scripts/turboDev.ts",
     "build": "tsc"
   },
   "dependencies": {
