--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -20,6 +22,9 @@ pids
 lib-cov
 
 # Coverage directory used by tools like istanbul
+
+# Temporary keyword extraction files
+temp_keywords/
 coverage
 *.lcov
 
@@ -129,6 +134,9 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+# qdrant
+qdrant_storage/
+
 # intellij
 .idea/
 *.iml
@@ -139,3 +147,12 @@ yarn.lock
 yarn.lock
 db.sqlite-journal
 data.db
+.DS_Store
+feed.db
+feedgen.sqlite
+followers.bin
+handles.bin
+meta.json
+density_grid.bin
+cluster_labels.json
+points.bin
