--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "unpublishFeed": "ts-node scripts/unpublishFeedGen.ts",
     "start": "ts-node src/index.ts",
     "turbo": "ts-node scripts/turboDev.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "init-qdrant": "ts-node scripts/init-qdrant.ts",
+    "migrate-qdrant": "python3 scripts/migrate_atlas.py"
   },
   "dependencies": {
     "@atproto/api": "^0.13.28",
@@ -20,18 +22,22 @@
     "@atproto/repo": "^0.3.2",
     "@atproto/syntax": "^0.1.2",
     "@atproto/xrpc-server": "^0.7.9",
+    "@qdrant/js-client-rest": "^1.16.2",
     "@types/ws": "^8.18.1",
     "better-sqlite3": "^11.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "kysely": "^0.27.4",
     "multiformats": "^9.9.0",
+    "natural": "^8.1.0",
+    "rake-js": "^0.1.1",
+    "stopword": "^3.1.5",
     "ws": "^8.19.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.1.2",
+    "@types/node": "^25.2.3",
     "inquirer": "^12.0.1",
     "localtunnel": "^2.0.2",
     "ts-node": "^10.9.1",
