--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     ],
     "outDir": "dist",
     "module": "CommonJS",
-    "target": "ES6",
+    "target": "es2022",
     "esModuleInterop": true,
     "moduleResolution": "node",
     "alwaysStrict": true,
