--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,24 @@
 version: '3.8'
 
 services:
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres-db
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres_storage:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=bsky
+      - POSTGRES_PASSWORD=bskypassword
+      - POSTGRES_DB=repo
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U bsky -d repo"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   qdrant:
     image: qdrant/qdrant:latest
     container_name: qdrant-atlas
@@ -14,20 +32,40 @@ services:
       - QDRANT__SERVICE__GRPC_PORT=6334
       - QDRANT__STORAGE__PERFORMANCE__SEARCH__MAX_SEARCHING_THREADS=4
       - QDRANT__STORAGE__PERFORMANCE__UPDATE__MAX_SEARCHING_THREADS=2
-    deploy:
-      resources:
-        limits:
-          memory: 8G  # Limit to 8GB RAM for ARM instance
-        reservations:
-          memory: 2G  # Reserve 2GB minimum
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+
+  api:
+    build: .
+    container_name: bsky-api
+    command: ["yarn", "start:api"]
+    ports:
+      - "3000:3000"
+    environment:
+      - POSTGRES_CONNECTION_STRING=postgresql://bsky:bskypassword@postgres:5432/repo
+      - QDRANT_URL=http://qdrant:6333
+    env_file: .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+      qdrant:
+        condition: service_started
+    restart: unless-stopped
+
+  ingester:
+    build: .
+    container_name: bsky-ingester
+    command: ["yarn", "start:ingester"]
+    environment:
+      - POSTGRES_CONNECTION_STRING=postgresql://bsky:bskypassword@postgres:5432/repo
+      - QDRANT_URL=http://qdrant:6333
+    env_file: .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
 
 volumes:
   qdrant_storage:
+    driver: local
+  postgres_storage:
     driver: local
