--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "publishFeed": "ts-node scripts/publishFeedGen.ts",
     "unpublishFeed": "ts-node scripts/unpublishFeedGen.ts",
     "start": "ts-node src/index.ts",
+    "start:api": "ts-node src/index.ts",
+    "start:ingester": "ts-node src/ingester.ts",
     "turbo": "ts-node scripts/turboDev.ts",
     "build": "tsc",
     "init-qdrant": "ts-node scripts/init-qdrant.ts",
@@ -23,19 +25,19 @@
     "@atproto/syntax": "^0.1.2",
     "@atproto/xrpc-server": "^0.7.9",
     "@qdrant/js-client-rest": "^1.16.2",
+    "@types/pg": "^8.18.0",
     "@types/ws": "^8.18.1",
-    "better-sqlite3": "^11.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "kysely": "^0.27.4",
     "multiformats": "^9.9.0",
     "natural": "^8.1.0",
+    "pg": "^8.19.0",
     "rake-js": "^0.1.1",
     "stopword": "^3.1.5",
     "ws": "^8.19.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.11",
     "@types/express": "^4.17.17",
     "@types/node": "^25.2.3",
     "inquirer": "^12.0.1",
